src/main/resources/static/css/Clups.css
a:focus, a:hover, a:active, a {
    text-decoration: none;
    color: dimgrey;
}

.addNewButton {
    background-color: cadetblue;
}

.alignTextRight{
    text-align: right;
}

.boldText {
    font-weight: bold;
    padding-bottom: 0;
    padding-top: 0;
}

.borderedRow{
    border: solid 3px white;
}

.bottomMargin {
    margin-bottom: 15px;
}

.buttonBlock {
    border-radius: 10px;
    border-color: white;
    font-family: sans-serif;
    color: white;
    text-align: left;
}

.categoryAlert {
    width: max-content;
}

.categoryLink {
    text-decoration-line: underline;
    font-weight: bold;
}

.categoriesBlock {
    background-color: steelblue;
    padding: 30px;
}

.currentPage {
    background-color: white;
}

.customerAccountBlock {
    width: 300px;
    margin-top: 0;
}

.customerText {
    font-weight: bold;
    font-size: larger;
    overflow-wrap: break-word;
}

.editCategoriesAndProducts{
    padding: 10px;
    font-family: sans-serif;
}

.fitHeight {
    height: 100%;
}

.fitReceiptHeight {
    height: calc(100% - 200px);
}

.formButtons {
    width: 18%;
    margin-right: 4%;
}

.fullWidth {
    width: 100%;
}

.leftMargin {
    margin-left: 15px;
}

.navbar {
    font-family: sans-serif;
    background-color: dodgerblue;
    text-transform: uppercase;
    font-weight: bold;
}

.order {
    font-family: Courier;
}

.orderTable {
    display: inline-block;
    overflow: auto;
    height: 100%;
    width: 100%;
    text-align: left;
}

.payButton {
    width: 40%;
    margin-bottom: 5%;
}

.prepaidAlert {
    width: 140px;
    padding: .375rem .75rem;
    overflow-wrap: break-word;
}

.prepaidButtonBlock {
    height: 15%;
    margin-top: 20px;
}

.prepaidCancelButton {
    width: 90px;
    margin-right: 15px;
}

.prepaidHeight {
    height: calc(100% - 175px);
}

.prepaidPayButton {
    width: 140px;
}

.prepaidSearchButton {
    width: 100px;
    margin-bottom: 25px;
}

.prepaidText {
    overflow: hidden;
    white-space: nowrap;
}

.productBlock {
    background-color: lightslategray;
    padding: 20px;
}

.productItem {
    width: 250px;
}

.receipt {
    background-color: white;
    border-radius: 30px;
    position: relative;
    box-shadow: 14px 14px 22px -18px;
    padding: 20px;
    border: solid 1px black;
}

.receiptBottom {
    position: absolute;
    bottom: 15px;
    right: 15px;
    left: 15px;
}

.receiptHeader {
    font-weight: bold;
    font-size: 1.5rem;
    color: dimgray;
}

.receiptLine {
    width: 100%;
    height: 5px;
    background: dimgray;
    overflow: hidden;
    margin-bottom: 10px;
}

.receiptLine2 {
    width: 100%;
    height: 2px;
    background: dimgray;
    overflow: hidden;
    margin-bottom: 10px;
}

.receiptText {
    color: dimgray;
}

.receiptProduct {
    width: 250px;
}

.receiptProductCount {
    width: 35px;
}

.receiptProductPrice {
    position: absolute;
    right: 25px;
}

.rightMargin {
    margin-right: 15px;
}

.scrollableBtnBlock {
    max-height: 100%;
    overflow: auto;
}

.selectedButton {
    background-color: darkslateblue;
}

.searchCustomerButton {
    background-color: steelblue;
    padding: 20px;
}

.searchFormInput {
    width: 60%;
}

.searchFormButton {
    width: 30%;
}

.setMaxScreenSize {
    display: inline-block;
    height: calc(100vh - 120px);
}

.setMaxScreenSizeEditor {
    display: inline-block;
    height: calc(100vh - 200px);
}

.totalBackground {
    background-color: white;
}

.topBottomMargin {
    margin-top: 25px;
    margin-bottom: 25px;
}

.topBottomPadding {
    padding-top: 15px;
    padding-bottom: 15px;
}

.totalPrice {
    width: 420px;
    font-weight: bold;
    color: dimgray;
}

.totalPriceTag {
    width: 70px;
    color: dimgrey;
    overflow: hidden;
    white-space: nowrap;
}

.zeroPadding {
    padding: 0;
    margin-left: 0;
    margin-right: 0;
}

